--- a/ContactWebAppUI/src/app/contact-details/add-contact/add-contact.component.html
+++ b/ContactWebAppUI/src/app/contact-details/add-contact/add-contact.component.html
@@ -8,7 +8,7 @@
           </div>
         </div>
       
-      <input class="form-control" name="FirstName" required #FirstName="ngModel" [(ngModel)]="service.formData.FirstName" placeholder="Please enter First Name">
+      <input class="form-control" name="FirstName" required #FirstName="ngModel" [(ngModel)]="service.formData.FirstName" maxlength="150" placeholder="Please enter First Name">
     </div>
   </div>
   
@@ -20,7 +20,7 @@
         </div>
         </div>
       
-      <input class="form-control" name="LastName" #LastName="ngModel" required [(ngModel)]="service.formData.LastName" placeholder="Please enter Last Name">
+      <input class="form-control" name="LastName" #LastName="ngModel" required [(ngModel)]="service.formData.LastName" maxlength="150" placeholder="Please enter Last Name">
     </div>
   </div>
 
@@ -32,12 +32,14 @@
         </div>
       </div>
     
-      <input class="form-control" name="Email" required #Email="ngModel" [(ngModel)]="service.formData.Email" placeholder="Please Enter Email">
+      <input class="form-control" name="Email" required #Email="ngModel" [(ngModel)]="service.formData.Email" maxlength="150" placeholder="Please Enter Email">
   </div>
   </div>
   
   
-  <!-- <div class="form-group">
+  <!-- 
+commented out code as below is resulting in ERROR TypeError: Cannot read property 'valid' of undefined in browser console
+<div class="form-group">
     <div class="input-group">
       <div class="input-group-prepend">
         <div class="input-group-text bg-red">
@@ -45,7 +47,7 @@
         </div>
       </div>
     
-    <input class="form-control" required  name="PhoneNo" #PhoneNo="ngModel" [(ngModel)]="service.formData.PhoneNo" placeholder="Please enter Mobile Number">
+    <input class="form-control" required  name="PhoneNo" #PhoneNo="ngModel" [(ngModel)]="service.formData.PhoneNo" maxlength="10" placeholder="Please enter Mobile Number">
   </div>
 </div>
 
